# ArtifactCabinet

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .scalafmt.conf  README.md  TO_BE_MERGED  agenda.md  agenda.org  diary.org  glossary.org  people.org  personal_ideas.org  task.org  weblog.org
Academic/: README.md
Compiler/: README.md
Compiler/sexpr/: README.md  meson.build  sexpr_rec.h  sexpr_rec_tests.cpp
Computation/: .gitignore  (+2 more)
Computation/Rosalind/: 2SUM.jl  3SUM.jl  BFS.ts  BIN.rs  BINS.rkt  CC_oop.java  CONS.wl  Cargo.toml  DDEG.jl  DEG.rkt  DIJ.jl  DNA.m  DNA.ml  DNA.rs  DNA.scala  FIB.rs  FIBD.rkt  FIBO.rkt  GC.rs  GRPH.wl  HAMM.ml  HAMM.rs  HEA.java  IEV.go  INI3.rkt  INI4.jl  INI5.jl  INI6.jl  INS.jl  IPRB.rs  LCSM.jl  LIA.m  MAJ.jl  MER.jl  MPRT.jl  MRNA.go  MS.py  PAR.py  PERM.wl  PROT.rs  (+12 more)
Computation/Rosalind/lib/: readdlm.rs  ros.rs
Computation/competitive/rust/: .gitignore  160A.rs  263A.rs  4A.rs  71A.rs  Cargo.toml  README.md  r.sh
Computation/competitive/rust/difficulty_1000/: 1206B.rs  271A.rs
Computation/functional/persistent_stack/: CMakeLists.txt  README.md  Stack_impl1.cpp  Stack_impl_arena_alloc.cpp  Stack_impl_ref_count.cpp
Concurrency/cpp/: CMakeLists.txt  README.md  counting_seaphore.cpp  defered_async.cpp  future_vector.cpp  latch_barrier.cpp
Concurrency/pthreads/: 1_join.c  2_cond_var.c  CMakeLists.txt  README.md
Concurrency/qt/: CMakeLists.txt  README.md  async_monad.cpp  simple_map.cpp
Languages/c/embedguile/: CMakeLists.txt
Languages/cpp/: .clang-tidy  .gitignore  CMakeLists.txt  README.md
Languages/cpp/0_unsafe/: CMakeLists.txt  modify_stack_of_previous_var.cpp
Languages/cpp/Basis/: 00_TMP.cpp  01_composing_maps.cpp  03_filesystem_basis.cpp  04_recrusive_sum_basis.cpp  05_closure_struct.cpp  06_algorithms.cpp  07_auto_template.cpp  CMakeLists.txt  cpt.py
Languages/cpp/C/: CMakeLists.txt  README.md  bit_masking.c  closure.c  deserializing_binary.c  macro_container_of.c  offset_play.c  pointer_array.c  reverse_cons.c  short_int_64_bench.c
Languages/cpp/C/icu_spacer/: CMakeLists.txt
Languages/cpp/CMakeScript/: 0.cmake  0r.bash  README.md  json.cmake
Languages/cpp/Copy_Move_sematics/: vector_shared_ptr_move.cpp
Languages/cpp/Modern/: CMakeLists.txt
Languages/cpp/Polymorphism/: 01_plugin_policy.cpp  02_func_ptr.cpp  04_CRTP_basic.cpp  05_obj_pointer_super_child.cpp  05_obj_pointer_super_child.h  06_varitants.cpp  CRTP_basic.cpp  README.md  func_ptr.cpp  owing_sequence.cpp  plugin_policy.cpp
Languages/cpp/Templates/: 01_invoke.cpp  02_folding.cpp
Languages/cpp/Toys/google_benchmark/: CMakeLists.txt  str_formatting.cpp
Languages/cpp/Toys/std_array_binary_file/: CMakeLists.txt  main.cpp
Languages/cpp/Unsafe/: CMakeLists.txt  vector_pointer_invalidation.cpp
Languages/cpp/basis/: 03_fmt.cpp  04_higher_order_functions.cpp  README.md  cpt.py
Languages/cpp/basis_doctest/: 00_template.cpp  05_template_basis.cpp  06_recrusive_sum_basis.cpp  09_algorithms_test.cpp  fetch-doctest.bash  new_file.py
Languages/cpp/copy_move_sematics/: CMakeLists.txt  move_copy_ctrs.cpp
Languages/cpp/external_libraries/slb_abseil/: CMakeLists.txt
Languages/cpp/google_test/test/: CMakeLists.txt  test_instance.cpp
Languages/cpp/scientific-compute/: README.md
Languages/cpp/simpleCSV/example/: CMakeLists.txt
Languages/cpp/simpleCSV/src/: csv.h
Languages/cpp/vector_std_move/: CMakeLists.txt  main.cpp
Languages/fortran/basis/: 01_hello.f90  02_arrays_and_strings.f90  03_modularity.f90  04_data.txt  04_loading.f90  05_datatypes.f90  06_gunplot_line.f90  07_LAPACK.f90  CMakeLists.txt
Languages/qt/7guis-qt6/: CMakeLists.txt
MultiCore/qt6_newAsync/: CMakeLists.txt
Playgrounds/zeromq/: CMakeLists.txt
Playgrounds/zeromq/02_echo_inproc/: README.md
Tech/libuv/: CMakeLists.txt  timer.c
Tech/notcurses/: CMakeLists.txt  main.cpp
Tech/podofo_play/: CMakeLists.txt  cli.cpp  pdf_outline.cpp  pdf_outline.h
Tech/simd/: CMakeLists.txt  README.md  cpt.py  detect_intrinsics.cpp
Tech/vtk/: CMakeLists.txt  README.md  basic_qt_vtk.cpp
Tech/zeromq/: meson.build
Tech/zeromq/01_echo_TCP/: README.md  client.cpp  server.cpp
Tech/zeromq/01_pub_sub/: README.md  client.cpp  server.cpp
Tech/zeromq/02_echo_inproc/: README.md  tri-threads-inproc.cpp
Tech/zeromq/03_large_data/: README.md  client.cpp  server.cpp
Toys/ImJson/: Cargo.toml  README.md  t.json
Toys/ImJson/lib/: deserializer.rs  im_json.rs  serializer.rs
Toys/ImJson/src/: main.rs
Toys/ImJson/tests/deserializer/: mod.rs  t01_list_basic.json  t01_list_basic.rs
Toys/ImJson/tests/serializer/: mod.rs  t01_basic.rs
Toys/cuno/: cuno.cpp  meson.build
workbench-fortran/: 01_hello.f90  CMakeLists.txt  README.md
workbench-qt/Pong-game-qt6/: CMakeLists.txt
workbench-rust/: .gitignore  Cargo.toml  README.md  play.rs
workbench-rust/Tic-Tac-Toe/src/: main.rs
workbench-rust/algorithm/: Cargo.toml
workbench-rust/druid_gui_test/src/: grid_four.rs
workbench-rust/ellisya_virtual_machine/: Cargo.toml
workbench-rust/ellisya_virtual_machine/src/: ellisya.rs
workbench-rust/linked_list/: Cargo.toml
workbench-rust/macros_test/: Cargo.toml  README.md
workbench-rust/pest_peg_parser/: Cargo.toml
workbench-rust/pong-game/: Cargo.toml
workbench-rust/pong-game/src/: README.md
workbench-rust/snippets/: 01_io.rs  03_unicode_indentifier.rs
workbench-rust/src/: main.rs
workbench-rust/src/os_release/: main.rs
workbench-system-programming/: CMakeLists.txt  README.md  scratch.c
workbench-system-programming/49_memory_mappings/: README.md  mem_cat.c
workbench-system-programming/4_file_io/: file_stat.c
workbench-system-programming/6_processes/: CMakeLists.txt  process_basis.c
workbench-system-programming/7_memory_allocation/: memory_basis.c
workbench-system-programming/gdk-keyevent/: CMakeLists.txt
workbench-system-programming/general-c/: CMakeLists.txt  README.md
workbench-system-programming/include/: CMakeLists.txt  ename.c.inc
workbench-system-programming/io_uring/: ideps.bash
workbench-system-programming/posix_threads/: pthreads_101.c
(+1504 files in other folders)
