[package]
name = "Rosalind"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "DNA"
path = "DNA.rs"

[[bin]]
name = "RNA"
path = "RNA.rs"

[[bin]]
name = "REVC"
path = "REVC.rs"

[[bin]]
name = "HAMM"
path = "HAMM.rs"

[[bin]]
name = "IPRB"
path = "IPRB.rs"

[[bin]]
name = "FIB"
path = "FIB.rs"

[[bin]]
name = "GC"
path = "GC.rs"

[[bin]]
name = "PROT"
path = "PROT.rs"

[[bin]]
name = "SUBS"
path = "SUBS.rs"

[[bin]]
name = "BIN"
path = "BIN.rs"

[lib]
name="ros"
path="./lib/ros.rs"
