[package]
name = "ellisya_virtual_machine"
version = "0.1.0"
authors = ["shenleban tongying <shenlebantongying@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "assembler"
path = "src/assembler.rs"

[[bin]]
name = "ellisya"
path = "src/ellisya.rs"
